force-app/main/default/objects/Scheme_Claim__c/Scheme_Claim__c.object-meta.xml
<CustomObject>
    <label>Scheme Claim</label>
    <pluralLabel>Scheme Claims</pluralLabel>
    <nameField>
        <displayFormat>CLM-{0000}</displayFormat>
        <label>Claim No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>