force-app/main/default/objects/Scheme_Claim__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <label>Distributor</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Scheme Claims</relationshipLabel>
    <relationshipName>Scheme_Claims</relationshipName>
</CustomField>