force-app/main/default/objects/Scheme_Claim__c/fields/Scheme__c.field-meta.xml
<CustomField>
    <fullName>Scheme__c</fullName>
    <label>Scheme</label>
    <type>Lookup</type>
    <referenceTo>Scheme__c</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
</CustomField>